n8n/n8n-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/component: workflow-automation
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: n8n
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
      app.kubernetes.io/component: workflow-automation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
        app.kubernetes.io/component: workflow-automation
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/n8n
            server: 192.168.86.107
