n8n/n8n-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.albinmedoc.se`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
